Fixed pager padding on small screens

--- a/material_theme/css/main.css
+++ b/material_theme/css/main.css
@@ -955,7 +955,7 @@ section {
 	}
 	.pager {
 		width: 100%;
-		padding: 0 15px;
+		padding: 50px 15px;
 	}
 }
 
